// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrderDetails renders a completed order with its main fields 1`] = `
<View>
  <View
    style={
      {
        "marginVertical": 8,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
        }
      }
    >
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": "#1c7e33",
              "fontSize": 32,
            },
            undefined,
            {
              "fontFamily": "Feather",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        
      </Text>
      <View
        style={
          {
            "marginVertical": 8,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "CentraNo1-Medium",
              "fontSize": 18,
              "fontWeight": "500",
              "letterSpacing": 0,
              "lineHeight": 24,
              "textAlign": "center",
            }
          }
        >
          Order Successful!
        </Text>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#686e7d",
              "fontFamily": "CentraNo1-Book",
              "fontSize": 14,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          all good
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "marginVertical": 8,
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#121314",
            "fontFamily": "CentraNo1-Medium",
            "fontSize": 24,
            "fontWeight": "500",
            "letterSpacing": 0,
            "lineHeight": 32,
            "textAlign": "center",
          }
        }
      >
        0.05
         
        ETH
      </Text>
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#686e7d",
            "fontFamily": "CentraNo1-Book",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 22,
            "textAlign": "center",
          }
        }
      >
        $
        98 USD
      </Text>
    </View>
    <View
      style={
        {
          "marginVertical": 4,
        }
      }
    >
      <TouchableOpacity
        onPress={[Function]}
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#4459ff",
              "fontFamily": "CentraNo1-Book",
              "fontSize": 14,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          View order status on TestProvider
        </Text>
      </TouchableOpacity>
    </View>
  </View>
  <View
    style={
      {
        "marginVertical": 8,
      }
    }
  >
    <TouchableOpacity
      accessible={false}
      disabled={true}
    >
      <View
        style={
          [
            {
              "borderColor": "#b7bbc8",
              "borderRadius": 8,
              "borderWidth": 1.5,
              "padding": 16,
            },
            {
              "paddingVertical": 12,
            },
            undefined,
            {
              "padding": 0,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "marginVertical": 4,
            }
          }
        />
        <View
          style={
            {
              "marginVertical": 4,
            }
          }
        >
          <View
            accessibilityRole="none"
            accessible={true}
            style={
              {
                "padding": 16,
                "paddingVertical": 0,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  {
                    "flex": 1,
                  }
                }
                testID="listitemcolumn"
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "CentraNo1-Book",
                      "fontSize": 14,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 22,
                    }
                  }
                >
                  Order ID
                </Text>
              </View>
              <View
                accessible={false}
                style={
                  {
                    "width": 16,
                  }
                }
                testID="listitem-gap"
              />
              <View
                style={
                  {
                    "flex": -1,
                  }
                }
                testID="listitemcolumn"
              >
                <Text
                  accessibilityRole="text"
                  selectable={true}
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "CentraNo1-Bold",
                      "fontSize": 14,
                      "fontWeight": "700",
                      "letterSpacing": 0,
                      "lineHeight": 22,
                    }
                  }
                >
                  prov-order-xyz
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "marginVertical": 4,
            }
          }
        >
          <View
            accessibilityRole="none"
            accessible={true}
            style={
              {
                "padding": 16,
                "paddingVertical": 0,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  {
                    "flex": 1,
                  }
                }
                testID="listitemcolumn"
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "CentraNo1-Book",
                      "fontSize": 14,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 22,
                    }
                  }
                >
                  Date and Time
                </Text>
              </View>
              <View
                accessible={false}
                style={
                  {
                    "width": 16,
                  }
                }
                testID="listitem-gap"
              />
              <View
                style={
                  {
                    "flex": -1,
                  }
                }
                testID="listitemcolumn"
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "CentraNo1-Bold",
                      "fontSize": 14,
                      "fontWeight": "700",
                      "letterSpacing": 0,
                      "lineHeight": 22,
                    }
                  }
                >
                  Nov 14 at 5:13 pm
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          accessibilityRole="none"
          accessible={true}
          style={
            {
              "padding": 16,
              "paddingVertical": 0,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                {
                  "flex": 1,
                }
              }
              testID="listitemcolumn"
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "CentraNo1-Book",
                    "fontSize": 14,
                    "fontWeight": "400",
                    "letterSpacing": 0,
                    "lineHeight": 22,
                  }
                }
              >
                Payment Method
              </Text>
            </View>
            <View
              accessible={false}
              style={
                {
                  "width": 16,
                }
              }
              testID="listitem-gap"
            />
            <View
              style={
                {
                  "flex": -1,
                }
              }
              testID="listitemcolumn"
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "CentraNo1-Bold",
                    "fontSize": 14,
                    "fontWeight": "700",
                    "letterSpacing": 0,
                    "lineHeight": 22,
                  }
                }
              >
                Credit Card
              </Text>
            </View>
          </View>
        </View>
        <View
          accessibilityRole="none"
          accessible={true}
          style={
            {
              "padding": 16,
              "paddingVertical": 0,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "flex-end",
                  "flex": 1,
                }
              }
              testID="listitemcolumn"
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "CentraNo1-Book",
                    "fontSize": 14,
                    "fontWeight": "400",
                    "letterSpacing": 0,
                    "lineHeight": 22,
                  }
                }
              >
                TestProvider
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "marginVertical": 4,
            }
          }
        >
          <View
            accessibilityRole="none"
            accessible={true}
            style={
              {
                "padding": 16,
                "paddingVertical": 0,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  {
                    "flex": 1,
                  }
                }
                testID="listitemcolumn"
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "CentraNo1-Book",
                      "fontSize": 14,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 22,
                    }
                  }
                >
                  Token Amount
                </Text>
              </View>
              <View
                accessible={false}
                style={
                  {
                    "width": 16,
                  }
                }
                testID="listitem-gap"
              />
              <View
                style={
                  {
                    "flex": -1,
                  }
                }
                testID="listitemcolumn"
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "CentraNo1-Bold",
                      "fontSize": 14,
                      "fontWeight": "700",
                      "letterSpacing": 0,
                      "lineHeight": 22,
                    }
                  }
                >
                  0.05
                   
                  ETH
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "marginVertical": 8,
            }
          }
        >
          <View
            style={
              {
                "marginVertical": 4,
              }
            }
          >
            <View
              accessibilityRole="none"
              accessible={true}
              style={
                {
                  "padding": 16,
                  "paddingVertical": 0,
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                    }
                  }
                  testID="listitemcolumn"
                >
                  <Text
                    accessibilityRole="text"
                    style={
                      {
                        "color": "#121314",
                        "fontFamily": "CentraNo1-Book",
                        "fontSize": 14,
                        "fontWeight": "400",
                        "letterSpacing": 0,
                        "lineHeight": 22,
                      }
                    }
                  >
                    Exchange Rate
                  </Text>
                </View>
                <View
                  accessible={false}
                  style={
                    {
                      "width": 16,
                    }
                  }
                  testID="listitem-gap"
                />
                <View
                  style={
                    {
                      "flex": 0,
                    }
                  }
                  testID="listitemcolumn"
                >
                  <Text
                    accessibilityRole="text"
                    style={
                      {
                        "color": "#121314",
                        "fontFamily": "CentraNo1-Bold",
                        "fontSize": 14,
                        "fontWeight": "700",
                        "letterSpacing": 0,
                        "lineHeight": 22,
                      }
                    }
                  >
                    1 
                    ETH
                     @
                     
                    2000 USD
                  </Text>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              {
                "marginVertical": 4,
              }
            }
          >
            <View
              accessibilityRole="none"
              accessible={true}
              style={
                {
                  "padding": 16,
                  "paddingVertical": 0,
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                    }
                  }
                  testID="listitemcolumn"
                >
                  <Text
                    accessibilityRole="text"
                    style={
                      {
                        "color": "#121314",
                        "fontFamily": "CentraNo1-Book",
                        "fontSize": 14,
                        "fontWeight": "400",
                        "letterSpacing": 0,
                        "lineHeight": 22,
                      }
                    }
                  >
                    USD
                     
                    Amount
                  </Text>
                </View>
                <View
                  accessible={false}
                  style={
                    {
                      "width": 16,
                    }
                  }
                  testID="listitem-gap"
                />
                <View
                  style={
                    {
                      "flex": -1,
                    }
                  }
                  testID="listitemcolumn"
                >
                  <Text
                    accessibilityRole="text"
                    style={
                      {
                        "color": "#121314",
                        "fontFamily": "CentraNo1-Bold",
                        "fontSize": 14,
                        "fontWeight": "700",
                        "letterSpacing": 0,
                        "lineHeight": 22,
                      }
                    }
                  >
                    $
                    98 USD
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "marginVertical": 4,
            }
          }
        >
          <View
            accessibilityRole="none"
            accessible={true}
            style={
              {
                "padding": 16,
                "paddingVertical": 0,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  {
                    "flex": 1,
                  }
                }
                testID="listitemcolumn"
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "CentraNo1-Book",
                      "fontSize": 14,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 22,
                    }
                  }
                >
                  Total Fees
                </Text>
              </View>
              <View
                accessible={false}
                style={
                  {
                    "width": 16,
                  }
                }
                testID="listitem-gap"
              />
              <View
                style={
                  {
                    "flex": -1,
                  }
                }
                testID="listitemcolumn"
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "CentraNo1-Bold",
                      "fontSize": 14,
                      "fontWeight": "700",
                      "letterSpacing": 0,
                      "lineHeight": 22,
                    }
                  }
                >
                  $
                  2 USD
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "backgroundColor": "#b7bbc866",
              "height": 1,
              "marginVertical": 12,
            }
          }
        />
        <View
          style={
            {
              "marginVertical": 4,
            }
          }
        >
          <View
            accessibilityRole="none"
            accessible={true}
            style={
              {
                "padding": 16,
                "paddingVertical": 0,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  {
                    "flex": 1,
                  }
                }
                testID="listitemcolumn"
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "CentraNo1-Book",
                      "fontSize": 14,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 22,
                    }
                  }
                >
                  Purchase Amount Total
                </Text>
              </View>
              <View
                accessible={false}
                style={
                  {
                    "width": 16,
                  }
                }
                testID="listitem-gap"
              />
              <View
                style={
                  {
                    "flex": -1,
                  }
                }
                testID="listitemcolumn"
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "CentraNo1-Bold",
                      "fontSize": 14,
                      "fontWeight": "700",
                      "letterSpacing": 0,
                      "lineHeight": 22,
                    }
                  }
                >
                  $
                  100 USD
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "marginVertical": 8,
            }
          }
        >
          <TouchableOpacity
            onPress={[Function]}
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#4459ff",
                  "fontFamily": "CentraNo1-Book",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 22,
                  "textAlign": "center",
                }
              }
            >
              View full details on
               
              Etherscan
            </Text>
          </TouchableOpacity>
        </View>
      </View>
    </TouchableOpacity>
  </View>
</View>
`;

exports[`OrderDetails renders the failed-state stage when the order is FAILED 1`] = `
<View>
  <View
    style={
      {
        "marginVertical": 8,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
        }
      }
    >
      <Image
        source={1}
      />
      <View
        style={
          {
            "marginVertical": 8,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "CentraNo1-Medium",
              "fontSize": 18,
              "fontWeight": "500",
              "letterSpacing": 0,
              "lineHeight": 24,
              "textAlign": "center",
            }
          }
        >
          Order Failed
        </Text>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#686e7d",
              "fontFamily": "CentraNo1-Book",
              "fontSize": 14,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          all good
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "marginVertical": 8,
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#121314",
            "fontFamily": "CentraNo1-Medium",
            "fontSize": 24,
            "fontWeight": "500",
            "letterSpacing": 0,
            "lineHeight": 32,
            "textAlign": "center",
          }
        }
      >
        0.05
         
        ETH
      </Text>
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#686e7d",
            "fontFamily": "CentraNo1-Book",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 22,
            "textAlign": "center",
          }
        }
      >
        $
        98 USD
      </Text>
    </View>
    <View
      style={
        {
          "marginVertical": 4,
        }
      }
    >
      <TouchableOpacity
        onPress={[Function]}
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#4459ff",
              "fontFamily": "CentraNo1-Book",
              "fontSize": 14,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          View order status on TestProvider
        </Text>
      </TouchableOpacity>
    </View>
  </View>
  <View
    style={
      {
        "marginVertical": 8,
      }
    }
  >
    <TouchableOpacity
      accessible={false}
      disabled={true}
    >
      <View
        style={
          [
            {
              "borderColor": "#b7bbc8",
              "borderRadius": 8,
              "borderWidth": 1.5,
              "padding": 16,
            },
            {
              "paddingVertical": 12,
            },
            undefined,
            {
              "padding": 0,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "marginVertical": 4,
            }
          }
        />
        <View
          style={
            {
              "marginVertical": 4,
            }
          }
        >
          <View
            accessibilityRole="none"
            accessible={true}
            style={
              {
                "padding": 16,
                "paddingVertical": 0,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  {
                    "flex": 1,
                  }
                }
                testID="listitemcolumn"
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "CentraNo1-Book",
                      "fontSize": 14,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 22,
                    }
                  }
                >
                  Order ID
                </Text>
              </View>
              <View
                accessible={false}
                style={
                  {
                    "width": 16,
                  }
                }
                testID="listitem-gap"
              />
              <View
                style={
                  {
                    "flex": -1,
                  }
                }
                testID="listitemcolumn"
              >
                <Text
                  accessibilityRole="text"
                  selectable={true}
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "CentraNo1-Bold",
                      "fontSize": 14,
                      "fontWeight": "700",
                      "letterSpacing": 0,
                      "lineHeight": 22,
                    }
                  }
                >
                  prov-order-xyz
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "marginVertical": 4,
            }
          }
        >
          <View
            accessibilityRole="none"
            accessible={true}
            style={
              {
                "padding": 16,
                "paddingVertical": 0,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  {
                    "flex": 1,
                  }
                }
                testID="listitemcolumn"
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "CentraNo1-Book",
                      "fontSize": 14,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 22,
                    }
                  }
                >
                  Date and Time
                </Text>
              </View>
              <View
                accessible={false}
                style={
                  {
                    "width": 16,
                  }
                }
                testID="listitem-gap"
              />
              <View
                style={
                  {
                    "flex": -1,
                  }
                }
                testID="listitemcolumn"
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "CentraNo1-Bold",
                      "fontSize": 14,
                      "fontWeight": "700",
                      "letterSpacing": 0,
                      "lineHeight": 22,
                    }
                  }
                >
                  Nov 14 at 5:13 pm
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          accessibilityRole="none"
          accessible={true}
          style={
            {
              "padding": 16,
              "paddingVertical": 0,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                {
                  "flex": 1,
                }
              }
              testID="listitemcolumn"
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "CentraNo1-Book",
                    "fontSize": 14,
                    "fontWeight": "400",
                    "letterSpacing": 0,
                    "lineHeight": 22,
                  }
                }
              >
                Payment Method
              </Text>
            </View>
            <View
              accessible={false}
              style={
                {
                  "width": 16,
                }
              }
              testID="listitem-gap"
            />
            <View
              style={
                {
                  "flex": -1,
                }
              }
              testID="listitemcolumn"
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "CentraNo1-Bold",
                    "fontSize": 14,
                    "fontWeight": "700",
                    "letterSpacing": 0,
                    "lineHeight": 22,
                  }
                }
              >
                Credit Card
              </Text>
            </View>
          </View>
        </View>
        <View
          accessibilityRole="none"
          accessible={true}
          style={
            {
              "padding": 16,
              "paddingVertical": 0,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "flex-end",
                  "flex": 1,
                }
              }
              testID="listitemcolumn"
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "CentraNo1-Book",
                    "fontSize": 14,
                    "fontWeight": "400",
                    "letterSpacing": 0,
                    "lineHeight": 22,
                  }
                }
              >
                TestProvider
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "marginVertical": 4,
            }
          }
        >
          <View
            accessibilityRole="none"
            accessible={true}
            style={
              {
                "padding": 16,
                "paddingVertical": 0,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  {
                    "flex": 1,
                  }
                }
                testID="listitemcolumn"
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "CentraNo1-Book",
                      "fontSize": 14,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 22,
                    }
                  }
                >
                  Token Amount
                </Text>
              </View>
              <View
                accessible={false}
                style={
                  {
                    "width": 16,
                  }
                }
                testID="listitem-gap"
              />
              <View
                style={
                  {
                    "flex": -1,
                  }
                }
                testID="listitemcolumn"
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "CentraNo1-Bold",
                      "fontSize": 14,
                      "fontWeight": "700",
                      "letterSpacing": 0,
                      "lineHeight": 22,
                    }
                  }
                >
                  0.05
                   
                  ETH
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "marginVertical": 8,
            }
          }
        >
          <View
            style={
              {
                "marginVertical": 4,
              }
            }
          >
            <View
              accessibilityRole="none"
              accessible={true}
              style={
                {
                  "padding": 16,
                  "paddingVertical": 0,
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                    }
                  }
                  testID="listitemcolumn"
                >
                  <Text
                    accessibilityRole="text"
                    style={
                      {
                        "color": "#121314",
                        "fontFamily": "CentraNo1-Book",
                        "fontSize": 14,
                        "fontWeight": "400",
                        "letterSpacing": 0,
                        "lineHeight": 22,
                      }
                    }
                  >
                    Exchange Rate
                  </Text>
                </View>
                <View
                  accessible={false}
                  style={
                    {
                      "width": 16,
                    }
                  }
                  testID="listitem-gap"
                />
                <View
                  style={
                    {
                      "flex": 0,
                    }
                  }
                  testID="listitemcolumn"
                >
                  <Text
                    accessibilityRole="text"
                    style={
                      {
                        "color": "#121314",
                        "fontFamily": "CentraNo1-Bold",
                        "fontSize": 14,
                        "fontWeight": "700",
                        "letterSpacing": 0,
                        "lineHeight": 22,
                      }
                    }
                  >
                    1 
                    ETH
                     @
                     
                    2000 USD
                  </Text>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              {
                "marginVertical": 4,
              }
            }
          >
            <View
              accessibilityRole="none"
              accessible={true}
              style={
                {
                  "padding": 16,
                  "paddingVertical": 0,
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                    }
                  }
                  testID="listitemcolumn"
                >
                  <Text
                    accessibilityRole="text"
                    style={
                      {
                        "color": "#121314",
                        "fontFamily": "CentraNo1-Book",
                        "fontSize": 14,
                        "fontWeight": "400",
                        "letterSpacing": 0,
                        "lineHeight": 22,
                      }
                    }
                  >
                    USD
                     
                    Amount
                  </Text>
                </View>
                <View
                  accessible={false}
                  style={
                    {
                      "width": 16,
                    }
                  }
                  testID="listitem-gap"
                />
                <View
                  style={
                    {
                      "flex": -1,
                    }
                  }
                  testID="listitemcolumn"
                >
                  <Text
                    accessibilityRole="text"
                    style={
                      {
                        "color": "#121314",
                        "fontFamily": "CentraNo1-Bold",
                        "fontSize": 14,
                        "fontWeight": "700",
                        "letterSpacing": 0,
                        "lineHeight": 22,
                      }
                    }
                  >
                    $
                    98 USD
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "marginVertical": 4,
            }
          }
        >
          <View
            accessibilityRole="none"
            accessible={true}
            style={
              {
                "padding": 16,
                "paddingVertical": 0,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  {
                    "flex": 1,
                  }
                }
                testID="listitemcolumn"
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "CentraNo1-Book",
                      "fontSize": 14,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 22,
                    }
                  }
                >
                  Total Fees
                </Text>
              </View>
              <View
                accessible={false}
                style={
                  {
                    "width": 16,
                  }
                }
                testID="listitem-gap"
              />
              <View
                style={
                  {
                    "flex": -1,
                  }
                }
                testID="listitemcolumn"
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "CentraNo1-Bold",
                      "fontSize": 14,
                      "fontWeight": "700",
                      "letterSpacing": 0,
                      "lineHeight": 22,
                    }
                  }
                >
                  $
                  2 USD
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "backgroundColor": "#b7bbc866",
              "height": 1,
              "marginVertical": 12,
            }
          }
        />
        <View
          style={
            {
              "marginVertical": 4,
            }
          }
        >
          <View
            accessibilityRole="none"
            accessible={true}
            style={
              {
                "padding": 16,
                "paddingVertical": 0,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  {
                    "flex": 1,
                  }
                }
                testID="listitemcolumn"
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "CentraNo1-Book",
                      "fontSize": 14,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 22,
                    }
                  }
                >
                  Purchase Amount Total
                </Text>
              </View>
              <View
                accessible={false}
                style={
                  {
                    "width": 16,
                  }
                }
                testID="listitem-gap"
              />
              <View
                style={
                  {
                    "flex": -1,
                  }
                }
                testID="listitemcolumn"
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "CentraNo1-Bold",
                      "fontSize": 14,
                      "fontWeight": "700",
                      "letterSpacing": 0,
                      "lineHeight": 22,
                    }
                  }
                >
                  $
                  100 USD
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </TouchableOpacity>
  </View>
</View>
`;
